@@ -58,6 +58,8 @@ public:
     virtual GSkyDir                  mc(const GEnergy& energy,
                                         const GTime& time,
                                         GRan& ran) const;
+    virtual double                   norm(const GSkyDir& dir,
+                                          const double&  radius) const;
     virtual void                     read(const GXmlElement& xml);
     virtual void                     write(GXmlElement& xml) const;
 
