@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 00-08-02
 
 Author(s) : Juergen Knoedlseder
 
-19 February 2014
+20 February 2014
 
 
 1. Introduction
@@ -58,6 +58,12 @@ cut off power law spectral functions.
 Added normalize attribute to GModelSpatialDiffuseMap that allows control
 over the internal normalization of the map. By default, the map is normalized,
 but by specifying normalize="0" the normalization can be switched off.
+
+A norm() method has been added to the abstract GModelSpatial interface that
+returns the model normalization within a circular region. This is used in the
+GModelSky::mc method to correctly reflect the normalization specified in the
+XML file. The method is also used to flag sources outside the simulation
+cone (applies so for the point sources, radial source and elliptical sources).
 
 
 9. Numerics module
